--- a/css/app.css
+++ b/css/app.css
@@ -24,35 +24,28 @@
 }
 
 #transit-status {
-	
-.subwayIcon123 {
-        width: 81px;
-        height: 23px;
-        backround-url(http://new.mta.info/sites/all/modules/custom/statusblock/images/sprite_reg.gif) 0 0;
-}
-
-
-.subwayIcon123 {
-        width: 81px;
-        height: 23px;
-        backround-url(http://new.mta.info/sites/all/modules/custom/statusblock/images/sprite_reg.gif) 0 0;
-}
-margin
-.subwayIcon123 {
-        width: 81px;
-        height: 23px;
-        backround-url(http://new.mta.info/sites/all/modules/custom/statusblock/images/sprite_reg.gif) 0 0;
-}
-
-
-.subwayIcon123 {
-        width: 81px;
-        height: 23px;
-        backround-url(http://new.mta.info/sites/all/modules/custom/statusblock/images/sprite_reg.gif) 0 0;
-}
--top: 1em;
+	margin-top: 1em;
 	margin-bottom: 1em;
 	text-align: left;
+}
+
+.subwayIcon123 {
+        width: 81px;
+        height: 23px;
+        backround-url(http://new.mta.info/sites/all/modules/custom/statusblock/images/sprite_reg.gif) 0 0;
+}
+
+.subwayIcon123 {
+        width: 81px;
+        height: 23px;
+        backround-url(http://new.mta.info/sites/all/modules/custom/statusblock/images/sprite_reg.gif) 0 0;
+}
+
+
+.subwayIcon123 {
+        width: 81px;
+        height: 23px;
+        backround-url(http://new.mta.info/sites/all/modules/custom/statusblock/images/sprite_reg.gif) 0 0;
 }
 
 #transit-status table {
@@ -75,6 +68,9 @@ margin
 #weather-update-time, #transit-update-time {
 	font-size: 0.40em;
 	color: silver;
+	text-align: right;
+	padding: 0;
+	margin: 0;
 }
 
 .forecast {
@@ -106,4 +102,30 @@ margin
 	color: silver;
 	font-size: 1.5em;
 	padding: 0;
+}
+
+#humidity-feel {
+	font-size: small;
+	margin-top: -1.5em;
+	color: gray;
+}
+
+.planned-work {
+	color: #996600;
+}
+
+.good-service {
+	color: #060;
+}
+
+.delays {
+	color: red;
+}
+
+.sandy-reroute {
+	color: blue;
+}
+
+.suspended, .service-change {
+	color: #960;
 }
