--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 /* Positioning */
 
-.current-weather, .forecast-weather {
+.current-weather, .forecast-weather, .settings-container {
   padding: 2%;
 }
 
@@ -92,6 +92,17 @@ tbody tr:nth-child(odd) {
 td {
   padding: 1% 1% 1% 3%;
   margin: 0;
+}
+
+label {
+  display: block;
+  margin: 10% 0 1% 0;
+}
+
+input[type="text"], input[type="number"] {
+  width: 90%;
+  margin: 0;
+  border: 1px solid silver;
 }
 
 /* Typography */
