--- a/styles/main.css
+++ b/styles/main.css
@@ -160,6 +160,33 @@ form input[type=text]{
     display: block;
     margin-bottom: 16px;
     margin-top: 8px;
+    background-color:#000000;
+    padding: 4px 8px;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    font-size: 14px;
+}
+
+form input[type=radio]{
+    margin-right: 1rem;
+}
+
+form input[type=button] {
+    padding: 8px 16px;
+    margin-right: 8px;
+    font-size: 14px;
+}
+
+form input[type=button].primary {
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    color: #000000;
+}
+
+form input[type=button].secondary {
+    background-color: black;
+    border: 1px solid white;
+    color: white;
 }
 
 form label {
@@ -191,7 +218,7 @@ p.body-text a, p.body-text a:visited {
 }
 
 #station-radio-group {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
 }
 
 #station-radio-group div {
