--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 * {
-    font-size: 16px;
+    /* font-size: 16px; */
 }
 
 body {
