Handle missing subway config data. Fixes #24

--- a/styles/main.css
+++ b/styles/main.css
@@ -324,7 +324,7 @@ h1 {
     color: red;
 }
 
-/* MTA Line decoration below, this can be reused, don't throw it out */
+/* MTA Line decoration below */
 
 .line {
     font-family: Ariel, sans-serif;
