--- a/styles/main.css
+++ b/styles/main.css
@@ -125,7 +125,7 @@ input[type=checkbox] {
     margin-right: 0.5rem;
 }
 
-form input[type=text], form select {
+form input[type=text], select {
     display: block;
     margin-bottom: 1rem;
     margin-top: 0.5rem;
